bug: Remove hyphens:auto
Think ths doesn't look good when reading on body text

--- a/_sass/base.heading.scss
+++ b/_sass/base.heading.scss
@@ -6,6 +6,7 @@ h5 {
     font-family: 'Roboto Condensed', $font-family;
     line-height: 1.15;
     text-transform: uppercase;
+    text-wrap: balance;
 }
 
 h1 {
